pre ALPHA_N updates

--- a/base-one/trunk/src/org/hsqldb/resources/table-remarks.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/table-remarks.properties
@@ -25,7 +25,7 @@ SYSTEM_TABLETYPES=the types of tables that can be created/found within this data
 SYSTEM_TRIGGERS=the visible triggers defined within this database
 SYSTEM_TRIGGERCOLUMNS=the column usage of visible triggers defined within this database
 SYSTEM_TYPEINFO=a description of predefined table coloumn data types known to this database
-SYSTEM_TYPEINFO_EXT=a description of all non user-defined data types known to this database and the level of support for them in various capacities 
+SYSTEM_ALLTYPEINFO=a description of all non user-defined data types known to this database and the level of support for them in various capacities 
 SYSTEM_UDTS=the user-defined types that are available within this database
 SYSTEM_UDTATTRIBUTES=a description of the attributes of the user-defined types (UDTs) that are available in this database
 SYSTEM_USERS=users defined within this database
