pre ALPHA_N updates

--- a/base-one/trunk/src/org/hsqldb/resources/column-remarks.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/column-remarks.properties
@@ -67,6 +67,7 @@ SYSTEM_BYTECODE_OPERANDS=instruction operands
 SYSTEM_BYTECODE_OPERANDS_DESCRIPTION=a human-readable description of instruction operands
 SYSTEM_BYTECODE_INSTRUCTION_DESCRIPTION=a human-readable description of whole instruction
 SYSTEM_CACHEINFO_CACHE_CLASS=FQN of the Java Class implementing the cache
+SYSTEM_CACHEINFO_CACHE_HASH=the in-memory hashCode() of the Cache object
 SYSTEM_CACHEINFO_CACHE_FILE=absolute path of the file underlying the cache object
 SYSTEM_CACHEINFO_CACHE_LENGTH=length of the cache object's row data array        
 SYSTEM_CACHEINFO_CACHE_SIZE=number of rows currently cached         
@@ -115,7 +116,7 @@ SYSTEM_COLUMNS_IS_NULLABLE=is column nullable?: { YES (might allow) | NO (defini
 SYSTEM_COLUMNS_SCOPE_CATLOG=catalog of table that is the scope of a reference attribute (NULL if DATA_TYPE isn't REF) 
 SYSTEM_COLUMNS_SCOPE_SCHEMA=schema of table that is the scope of a reference attribute (NULL if the DATA_TYPE isn't REF) 
 SYSTEM_COLUMNS_SCOPE_TABLE=table name that this the scope of a reference attribute (NULL if the DATA_TYPE isn't REF) 
-SYSTEM_COLUMNS_SOURCE_DATA_TYPE=source type of a distinct type or user-generated Ref type, SQL type from java.sql.Types (NULL if DATA_TYPE isn't DISTINCT or user-generated REF) 
+SYSTEM_COLUMNS_SOURCE_DATA_TYPE=source type of a distinct type or user-generated Ref type, SQL type from DITypes (NULL if DATA_TYPE isn't DISTINCT or user-generated REF) 
 SYSTEM_CONNECTIONINFO_KEY=KEY: { SESSION_ID | AUTOCOMMIT | USER | CONNECTION_READONLY | DATABASE_READONLY | MAXROWS | DATABASE | IDENTITY ... }
 SYSTEM_CONNECTIONINFO_VALUE=VALUE: the value corresponding to the indicated key (see JavaDocs)
 SYSTEM_CROSSREFERENCE_PKTABLE_CAT=the catalog in which the referenced table is defined
@@ -168,9 +169,10 @@ SYSTEM_PROCEDURECOLUMNS_PRECISION=precision for number types; max length for siz
 SYSTEM_PROCEDURECOLUMNS_LENGTH=The maximum length in bytes of data, if definitely known, that would be transferred to a buffer on a fetch operation.  For numeric data, this size may be different than the size of the data stored on the data source.  This value is the same as the COLUMN_SIZE column for binary data. This value is the twice the COLUMN_SIZE column for character data.  If the actual value is unknown or is larger than can be represented in an INTEGER column value, this is NULL.
 SYSTEM_PROCEDURECOLUMNS_SCALE=scale (# of fractional digits) for number types
 SYSTEM_PROCEDURECOLUMNS_RADIX=Radix of reported numeric precision (i.e. base of number types)
-SYSTEM_PROCEDURECOLUMNS_NULLABLE=can column contain NULL?: e.g. { No Nulls | Nullable | Unknown }
+SYSTEM_PROCEDURECOLUMNS_NULLABLE=can column contain NULL: { No Nulls | Nullable | Unknown }?
 SYSTEM_PROCEDURECOLUMNS_REMARKS=comment describing parameter or result column
-SYSTEM_PROCEDURECOLUMNS_SIGNATURE=the signature of the Java method providing the SQL procedure entry point
+SYSTEM_PROCEDURECOLUMNS_SIGNATURE=typically, (but not limited to) the signature of the Java method providing the SQL procedure entry point
+SYSTEM_PROCEDURECOLUMNS_SEQ=provides the ability to deliver rows in JDBC DataaseMetaData sort contrct order
 SYSTEM_PROCEDURES_PROCEDURE_CAT=catalog in which procedure is defined
 SYSTEM_PROCEDURES_PROCEDURE_SCHEM=schema in which procedure is defined
 SYSTEM_PROCEDURES_PROCEDURE_NAME=procedure identifier 
@@ -227,6 +229,7 @@ SYSTEM_TABLES_REF_GENERATION=how are values in SELF_REFERENCING_COL_NAME created
 SYSTEM_TABLES_NEXT_IDENTITY=for tables with an identity column, the next value that will be system assigned.  NULL for all other tables          
 SYSTEM_TABLES_READ_ONLY=TRUE if the table is read-only, else FALSE              
 SYSTEM_TABLES_HSQLDB_TYPE=the HSQLDB-specific type of the table, e.g. ( MEMORY | CACHED | TEXT | ...)            
+SYSTEM_TABLES_CACHE_HASH=for CACHED and TEXT tables, the in-memory hashCode() of the table's Cache object.
 SYSTEM_TABLES_CACHE_FILE=for CACHED tables, the absolute path of file backing the table's Cache object.  For TEXT tables, the absolute path of the file, if any, assigned to the table with the latest, if any, 'SET TABLE ident SOURCE "spec" [DESC]' DDL.              
 SYSTEM_TABLES_DATA_SOURCE=for TEXT tables, the "spec" portion of the latest, if any, 'SET TABLE ident SOURCE "spec" [DESC]' DDL issued against the table.            
 SYSTEM_TABLES_IS_DESC=for TEXT tables, TRUE if the [DESC] portion was included in the latest, if any, 'SET TABLE ident SOURCE "spec" [DESC]' DDL issued against the table.
@@ -279,14 +282,14 @@ SYSTEM_UDTS_TYPE_CAT=type's catalog
 SYSTEM_UDTS_TYPE_SCHEM=type's schema
 SYSTEM_UDTS_TYPE_NAME=type's DBMS name
 SYSTEM_UDTS_CLASS_NAME=type's Java class name
-SYSTEM_UDTS_DATA_TYPE=type value defined in java.sql.Types, from one of { "JAVA_OBJECT" | "STRUCT" | "DISTINCT" }
+SYSTEM_UDTS_DATA_TYPE=type value defined in DITypes, from one of { "JAVA_OBJECT" | "STRUCT" | "DISTINCT" }
+SYSTEM_UDTS_BASE_TYPE=type code of the source type of a DISTINCT type or the type that implements the user-generated reference type of the SELF_REFERENCING_COLUMN of a structured type as defined in DITypes (null if DATA_TYPE is not DISTINCT or not STRUCT with REFERENCE_GENERATION = USER_DEFINED)
 SYSTEM_UDTS_REMARKS=explanatory comment on the user defined type
-SYSTEM_UDTS_BASE_TYPE=type code of the source type of a DISTINCT type or the type that implements the user-generated reference type of the SELF_REFERENCING_COLUMN of a structured type as defined in java.sql.Types (null if DATA_TYPE is not DISTINCT or not STRUCT with REFERENCE_GENERATION = USER_DEFINED) 
 SYSTEM_UDTATTRIBUTES_TYPE_CAT=type catalog
 SYSTEM_UDTATTRIBUTES_TYPE_SCHEM=type schema
 SYSTEM_UDTATTRIBUTES_TYPE_NAME=type name
 SYSTEM_UDTATTRIBUTES_ATTR_NAME=attribute name
-SYSTEM_UDTATTRIBUTES_DATA_TYPE=attribute type SQL type from java.sql.Types
+SYSTEM_UDTATTRIBUTES_DATA_TYPE=attribute type SQL type from DITypes
 SYSTEM_UDTATTRIBUTES_ATTR_TYPE_NAME=Data source dependent type name. For a UDT, the type name is fully qualified. For a REF, the type name is fully qualified and represents the target type of the reference type.
 SYSTEM_UDTATTRIBUTES_ATTR_SIZE=column size. For char or date types this is the maximum number of characters; for numeric or decimal types this is precision.
 SYSTEM_UDTATTRIBUTES_DECIMAL_DIGITS=the number of fractional digits (scale) of number type
@@ -302,7 +305,7 @@ SYSTEM_UDTATTRIBUTES_IS_NULLABLE="NO" means column definitely does not allow NUL
 SYSTEM_UDTATTRIBUTES_SCOPE_CATALOG=catalog of table that is the scope of a reference attribute (NULL if DATA_TYPE isn't REF)
 SYSTEM_UDTATTRIBUTES_SCOPE_SCHEMA=schema of table that is the scope of a reference attribute (NULL if DATA_TYPE isn't REF)
 SYSTEM_UDTATTRIBUTES_SCOPE_TABLE=table name that is the scope of a reference attribute (NULL if the DATA_TYPE isn't REF)
-SYSTEM_UDTATTRIBUTES_SOURCE_DATA_TYPE=source type of a distinct type or user-generated Ref type, SQL type from java.sql.Types (NULL if DATA_TYPE isn't DISTINCT or user-generated REF)
+SYSTEM_UDTATTRIBUTES_SOURCE_DATA_TYPE=source type of a distinct type or user-generated Ref type, SQL type from DITypes (NULL if DATA_TYPE isn't DISTINCT or user-generated REF)
 SYSTEM_USERS_USER=user name
 SYSTEM_USERS_ADMIN=has the administrative privilege?
 SYSTEM_VERSIONCOLUMNS_TABLE_CAT=table catalog        
@@ -310,13 +313,17 @@ SYSTEM_VERSIONCOLUMNS_TABLE_SCHEM=table schema
 SYSTEM_VERSIONCOLUMNS_TABLE_NAME=simple table name 
 SYSTEM_VERSIONCOLUMNS_SCOPE=not used
 SYSTEM_VERSIONCOLUMNS_COLUMN_NAME=column name
-SYSTEM_VERSIONCOLUMNS_DATA_TYPE=SQL data type from java.sql.Types
+SYSTEM_VERSIONCOLUMNS_DATA_TYPE=SQL data type from DITypes
 SYSTEM_VERSIONCOLUMNS_TYPE_NAME=Data source dependent type name
 SYSTEM_VERSIONCOLUMNS_COLUMN_SIZE=precision
 SYSTEM_VERSIONCOLUMNS_BUFFER_LENGTH=length of column value in bytes
 SYSTEM_VERSIONCOLUMNS_DECIMAL_DIGITS=scale
-SYSTEM_VERSIONCOLUMNS_PSEUDO_COLUMN=is this a pseudo column like an Oracle ROWID: { Unknown | Not Pseudo | Pseudo }
-SYSTEM_VIEWSOURCE_VIEW_CAT=view catalog
-SYSTEM_VIEWSOURCE_VIEW_SCHEM=view schema
-SYSTEM_VIEWSOURCE_VIEW_NAME=simple view name
-SYSTEM_VIEWSOURCE_VIEW_SQL=the sql that defines the view 
+SYSTEM_VERSIONCOLUMNS_PSEUDO_COLUMN=is this a pseudo column like an Oracle ROWID: { Unknown | Not Pseudo | Pseudo }?
+SYSTEM_VIEWS_TABLE_CATALOG=name of catalog in which view is defined
+SYSTEM_VIEWS_TABLE_SCHEMA=unqualified name of schema in which view is defined
+SYSTEM_VIEWS_TABLE_NAME=simple name of view
+SYSTEM_VIEWS_VIEW_DEFINITION=the character representation of the query expression contained in the corresponding view descriptor.
+SYSTEM_VIEWS_CHECK_OPTION={"CASCADED" | "LOCAL" | "NONE"}
+SYSTEM_VIEWS_IS_UPDATABLE={"YES" | "NO"}
+SYSTEM_VIEWS_VALID={TRUE | FALSE}
+
