--- a/base-one/trunk/src/org/hsqldb/resources/data-type-names.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/data-type-names.properties
@@ -1,6 +1,7 @@
 # default data-type-names
 ARRAY=ARRAY
 BIGINT=BIGINT
+BIGINT_IDENTITY=BIGINT IDENTITY
 BINARY=BINARY
 BIT=BIT
 BLOB=BLOB
@@ -12,8 +13,8 @@ DECIMAL=DECIMAL
 DISTINCT=DISTINCT
 DOUBLE=DOUBLE
 FLOAT=FLOAT
-IDENTITY=INTEGER IDENTITY
 INTEGER=INTEGER
+INTEGER_IDENTITY=INTEGER IDENTITY
 JAVA_OBJECT=JAVA_OBJECT
 LONGVARBINARY=LONGVARBINARY
 LONGVARCHAR=LONGVARCHAR
