--- a/base-one/trunk/src/org/hsqldb/resources/table-remarks.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/table-remarks.properties
@@ -30,4 +30,4 @@ SYSTEM_UDTS=the user-defined types that are available within this database
 SYSTEM_UDTATTRIBUTES=a description of the attributes of the user-defined types (UDTs) that are available in this database
 SYSTEM_USERS=users defined within this database
 SYSTEM_VERSIONCOLUMNS=the visible columns of the accessible tables that are automatically updated when any value in a row is updated
-SYSTEM_VIEWSOURCE=the SQL defining the accessible views defined within this database
+SYSTEM_VIEWS=Describes the accessible views defined within this database
