latest pre ALPHA_N updates

--- a/base-one/trunk/src/org/hsqldb/resources/column-remarks.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/column-remarks.properties
@@ -226,14 +226,21 @@ SYSTEM_TABLES_TYPE_SCHEM=table type schema
 SYSTEM_TABLES_TYPE_NAME=table type name 
 SYSTEM_TABLES_SELF_REFERENCING_COL_NAME=name of the designated "identifier" column of typed table (null if not typed) 
 SYSTEM_TABLES_REF_GENERATION=how are values in SELF_REFERENCING_COL_NAME created?: e.g. one of { "SYSTEM" | "USER" | "DERIVED" | NULL }
-SYSTEM_TABLES_NEXT_IDENTITY=for tables with an identity column, the next value that will be system assigned.  NULL for all other tables          
-SYSTEM_TABLES_READ_ONLY=TRUE if the table is read-only, else FALSE              
 SYSTEM_TABLES_HSQLDB_TYPE=the HSQLDB-specific type of the table, e.g. ( MEMORY | CACHED | TEXT | ...)            
-SYSTEM_TABLES_CACHE_HASH=for CACHED and TEXT tables, the in-memory hashCode() of the table's Cache object.
-SYSTEM_TABLES_CACHE_FILE=for CACHED tables, the absolute path of file backing the table's Cache object.  For TEXT tables, the absolute path of the file, if any, assigned to the table with the latest, if any, 'SET TABLE ident SOURCE "spec" [DESC]' DDL.              
-SYSTEM_TABLES_DATA_SOURCE=for TEXT tables, the "spec" portion of the latest, if any, 'SET TABLE ident SOURCE "spec" [DESC]' DDL issued against the table.            
-SYSTEM_TABLES_IS_DESC=for TEXT tables, TRUE if the [DESC] portion was included in the latest, if any, 'SET TABLE ident SOURCE "spec" [DESC]' DDL issued against the table.
+SYSTEM_TABLES_READ_ONLY=TRUE if the table is read-only, else FALSE  
 SYSTEM_TABLETYPES_TABLE_TYPE=table type name
+SYSTEM_TEXTTABLES_TABLE_CAT=table catalog
+SYSTEM_TEXTTABLES_TABLE_SCHEM=table schema
+SYSTEM_TEXTTABLES_TABLE_NAME=table name
+SYSTEM_TEXTTABLES_DATA_SOURCE_DEFINTION=the "spec" proption of the table's SET TABLE ... SOURCE DDL declaration
+SYSTEM_TEXTTABLES_FILE_PATH=path to table's text file data source
+SYSTEM_TEXTTABLES_FILE_ENCODING=encoding of table's text file data source
+SYSTEM_TEXTTABLES_FIELD_SEPARATOR=the default field separator
+SYSTEM_TEXTTABLES_VARCHAR_SEPARATOR=varchar field separator
+SYSTEM_TEXTTABLES_LONGVARCHAR_SEPARATOR=longvarchar field separator
+SYSTEM_TEXTTABLES_IS_IGNORE_FIRST=ignores first line of file?
+SYSTEM_TEXTTABLES_IS_ALL_QUOTED=every field is quoted?
+SYSTEM_TEXTTABLES_IS_DESC=read rows starting at end of file?
 SYSTEM_TRIGGERS_TRIGGER_CAT=Trigger catalog
 SYSTEM_TRIGGERS_TRIGGER_SCHEM=Trigger Schema
 SYSTEM_TRIGGERS_TRIGGER_NAME=Trigger Name
