--- a/base-one/trunk/src/org/hsqldb/resources/table-remarks.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/table-remarks.properties
@@ -22,12 +22,13 @@ SYSTEM_SUPERTABLES=the table hierarchies defined in this database. Only the imme
 SYSTEM_TABLEPRIVILEGES=the visible user level access permissions for each accessible table defined within this database
 SYSTEM_TABLES=the accessible tables defined within this database
 SYSTEM_TABLETYPES=the types of tables that can be created/found within this database
+SYSTEM_TEXTTABLES=the data source descriptors of the accessibleTEXT TABLE objects defined within this database
 SYSTEM_TRIGGERS=the visible triggers defined within this database
 SYSTEM_TRIGGERCOLUMNS=the column usage of visible triggers defined within this database
-SYSTEM_TYPEINFO=a description of predefined table coloumn data types known to this database
+SYSTEM_TYPEINFO=a description of predefined table column data types known to this database
 SYSTEM_ALLTYPEINFO=a description of all non user-defined data types known to this database and the level of support for them in various capacities 
 SYSTEM_UDTS=the user-defined types that are available within this database
 SYSTEM_UDTATTRIBUTES=a description of the attributes of the user-defined types (UDTs) that are available in this database
 SYSTEM_USERS=users defined within this database
 SYSTEM_VERSIONCOLUMNS=the visible columns of the accessible tables that are automatically updated when any value in a row is updated
-SYSTEM_VIEWS=Describes the accessible views defined within this database
+SYSTEM_VIEWS=the view descriptors of the accessible views defined within this database
