latest pre ALPHA_N updates

--- a/base-one/trunk/src/org/hsqldb/resources/column-remarks.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/column-remarks.properties
@@ -117,8 +117,7 @@ SYSTEM_COLUMNS_SCOPE_CATLOG=catalog of table that is the scope of a reference at
 SYSTEM_COLUMNS_SCOPE_SCHEMA=schema of table that is the scope of a reference attribute (NULL if the DATA_TYPE isn't REF) 
 SYSTEM_COLUMNS_SCOPE_TABLE=table name that this the scope of a reference attribute (NULL if the DATA_TYPE isn't REF) 
 SYSTEM_COLUMNS_SOURCE_DATA_TYPE=source type of a distinct type or user-generated Ref type, SQL type from DITypes (NULL if DATA_TYPE isn't DISTINCT or user-generated REF) 
-SYSTEM_CONNECTIONINFO_KEY=KEY: { SESSION_ID | AUTOCOMMIT | USER | CONNECTION_READONLY | DATABASE_READONLY | MAXROWS | DATABASE | IDENTITY ... }
-SYSTEM_CONNECTIONINFO_VALUE=VALUE: the value corresponding to the indicated key (see JavaDocs)
+SYSTEM_COLUMNS_TYPE_SUB=the HSQLDB-specific type subidentifier (1:default, 2:identity, 4:ignorecase)
 SYSTEM_CROSSREFERENCE_PKTABLE_CAT=the catalog in which the referenced table is defined
 SYSTEM_CROSSREFERENCE_PKTABLE_SCHEM=the schema in which the referenced table is defined
 SYSTEM_CROSSREFERENCE_PKTABLE_NAME=simple name of the referenced table
@@ -199,6 +198,8 @@ SYSTEM_SESSIONS_READONLY=is session in read-only mode?
 SYSTEM_SESSIONS_MAXROWS=what is the session's MAXROWS setting?
 SYSTEM_SESSIONS_LAST_IDENTITY=what is the last identity value used by this session?
 SYSTEM_SESSIONS_TRANSACTION_SIZE=how many undo items are there in this session's transaction buffer?
+SYSTEM_SESSIONINFO_KEY=KEY: { SESSION_ID | AUTOCOMMIT | USER | CONNECTION_READONLY | DATABASE_READONLY | MAXROWS | DATABASE | IDENTITY ... }
+SYSTEM_SESSIONINFO_VALUE=VALUE: the value corresponding to the indicated key (see JavaDocs)
 SYSTEM_SUPERTABLES_TABLE_CAT=the table's catalog 
 SYSTEM_SUPERTABLES_TABLE_SCHEM=table schema
 SYSTEM_SUPERTABLES_TABLE_NAME=table name 
