--- a/base-one/trunk/src/org/hsqldb/resources/org_hsqldb_Server_messages.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/org_hsqldb_Server_messages.properties
@@ -20,10 +20,12 @@ loaded from the server.properties file.\n\
 \n\
 The default port is 9001 if tls is false and 544 if it is true.\n\
 When omitted, the value of tls is true iff the system property:\n\
-     javax.net.ssl.keyStore\n\
+\n\
+    \tjavax.net.ssl.keyStore\n\
+\n\
 is defined. An example command line invocation might look like:\n\
 \n\
-     java -Djavax.net.ssl.keyStore=x -Djavax.net.ssl.keyStorePassword=y org.hsqldb.Server [-options]\n\
+    \tjava -Djavax.net.ssl.keyStore=x -Djavax.net.ssl.keyStorePassword=y org.hsqldb.Server [-options]\n\
 \n\
 For information on secure sockets, see: http://java.sun.com/products/jsse/
 webserver.help= Usage: java org.hsqldb.WebServer [-options]\n\
@@ -50,11 +52,11 @@ loaded from the webserver.properties file.\n\
 The default port is 80 if tls is false and 433 if it is true.\n\
 When omitted, the value of tls is true iff the system property:\n\
 \n\
-   javax.net.ssl.keyStore\n\
+    \tjavax.net.ssl.keyStore\n\
 \n\
 is defined. An example command line invocation might look like:\n\
 \n\
-java -Djavax.net.ssl.keyStore=x -Djavax.net.ssl.keyStorePassword=y org.hsqldb.WebServer [-options]\n\
+    \tjava -Djavax.net.ssl.keyStore=x -Djavax.net.ssl.keyStorePassword=y org.hsqldb.WebServer [-options]\n\
 \n\
 For information on secure sockets, see: http://java.sun.com/products/jsse/
 online.help=To close normally, connect and execute SHUTDOWN SQL\n\
