--- a/base-one/trunk/src/org/hsqldb/resources/table-remarks.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/table-remarks.properties
@@ -7,7 +7,6 @@ SYSTEM_CACHEINFO=the current state of the system row caching mechanism
 SYSTEM_CLASSPRIVILEGES=the visible user level access permissions for each Java class providing implementation for each accessible callable procedure, SQL function, trigger body and UDT method defined within this database
 SYSTEM_COLUMNPRIVILEGES=the visible user level access permissions of each visible column of each accessible table defined within this database
 SYSTEM_COLUMNS=the visible columns of each accessible table defined within this database
-SYSTEM_CONNECTIONINFO=information about the current database connection
 SYSTEM_CROSSREFERENCE=a description of how the accessible tables defined within this database import visible columns to enforce referential integrity
 SYSTEM_LOBS=LOB storage for Java resources defined within this database
 SYSTEM_INDEXINFO=information about the indicies of each accessible table defined within this database
@@ -17,6 +16,7 @@ SYSTEM_PROCEDURECOLUMNS=a description of the return type, parameters and result 
 SYSTEM_PROCEDURES=the procedures, SQL functions, trigger body routines and UDT methods defined within the database
 SYSTEM_SCHEMAS=the accessible schemas defined within this database
 SYSTEM_SESSIONS=the visible sessions open in this database
+SYSTEM_SESSIONINFO=information about the current database session
 SYSTEM_SUPERTYPES=the user-defined type (UDT) hierarchies defined in this database. Only the immediate super type/sub type relationship is modeled
 SYSTEM_SUPERTABLES=the table hierarchies defined in this database. Only the immediate super type/sub type relationship is modeled
 SYSTEM_TABLEPRIVILEGES=the visible user level access permissions for each accessible table defined within this database
