pre RC_2 updates

--- a/base-one/trunk/src/org/hsqldb/resources/data-type-names.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/data-type-names.properties
@@ -3,7 +3,7 @@ ARRAY=ARRAY
 BIGINT=BIGINT
 BIGINT_IDENTITY=BIGINT IDENTITY
 BINARY=BINARY
-BIT=BIT
+BOOLEAN=BOOLEAN
 BLOB=BLOB
 CHAR=CHAR
 CLOB=CLOB
