--- a/base-one/trunk/src/org/hsqldb/resources/table-remarks.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/table-remarks.properties
@@ -26,20 +26,20 @@ SYSTEM_TEXTTABLES=the data source descriptors of the accessibleTEXT TABLE object
 SYSTEM_TRIGGERS=the visible triggers defined within this database
 SYSTEM_TRIGGERCOLUMNS=the column usage of visible triggers defined within this database
 SYSTEM_TYPEINFO=a description of predefined table column data types known to this database
-SYSTEM_ALLTYPEINFO=a description of all non user-defined data types known to this database and the level of support for them in various capacities 
+SYSTEM_ALLTYPEINFO=a description of all non user-defined data types known to this database and the level of support for them in various capacities
 SYSTEM_UDTS=the user-defined types that are available within this database
 SYSTEM_UDTATTRIBUTES=a description of the attributes of the user-defined types (UDTs) that are available in this database
 SYSTEM_USERS=users defined within this database
 SYSTEM_VERSIONCOLUMNS=the visible columns of the accessible tables that are automatically updated when any value in a row is updated
 SYSTEM_VIEWS=the view descriptors of the accessible views defined within this database
 # since 1.7.2 RC1
-SYSTEM_CHECK_COLUMN_USAGE=one row for each column identified by a &lt;column reference&gt; contained in the &lt;search condition&gt; of a check constraint, domain constraint, or assertion.
-SYSTEM_CHECK_CONSTRAINT_ROUTINE_USAGE=one row for each SQL-invoked routine identified as the subject routine of either a &lt;routine invocation&gt;, a &lt;method reference&gt;, a  &lt;method invocation&gt;, or a &lt;static method invocation&gt;  contained in an &lt;assertion definition&gt;, a &lt;domain constraint&gt;, or a &lttable constraint definition&gt;.
-SYSTEM_CHECK_CONSTRAINTS=one row for each domain constraint, table check constraint, and assertion. 
-SYSTEM_CHECK_TABLE_USAGE=one row for each table identified by a &lt;table name&gt; simply contained in a &lt;table reference&gt; contained in the &lt;search condition&gt; of a check constraint, domain constraint, or assertion.
+SYSTEM_CHECK_COLUMN_USAGE=one row for each column identified by a <column reference> contained in the <search condition> of a check constraint, domain constraint, or assertion.
+SYSTEM_CHECK_ROUTINE_USAGE=one row for each SQL-invoked routine identified as the subject routine of either a <routine invocation>, a <method reference>, a  <method invocation>, or a <static method invocation>  contained in an <assertion definition>, a <domain constraint>, or a <table constraint definition>.
+SYSTEM_CHECK_CONSTRAINTS=one row for each domain constraint, table check constraint, and assertion.
+SYSTEM_CHECK_TABLE_USAGE=one row for each table identified by a <table name> simply contained in a <table reference> contained in the <search condition> of a check constraint, domain constraint, or assertion.
 SYSTEM_SEQUENCES=one row for each external sequence generator
 SYSTEM_TABLE_CONSTRAINTS=one row for each table constraint associated with a table
 SYSTEM_USAGE_PRIVILEGES=one row for each usage privilege descriptor.
-SYSTEM_VIEW_COLUMN_USAGE=one row for each column of a table that is explicitly or implicitly referenced in the &lt;query expression&gt; of the view being described.
-SYSTEM_VIEW_ROUTINE_USAGE=ne row for each SQL-invoked routine identified as the subject routine of either a &lt;routine invocation&gt;, a &lt;method reference&gt;, a &lt;method invocation&gt;, or a &lt;static method invocation&gt; contained in a &lt;view definition&gt;
-SYSTEM_VIEW_TABLE_USAGE=one row for each table identified by a &lt;table name&gt; simply contained in a &lt;table reference&gt; that is contained in the &lt;query expression&gt; of a view
+SYSTEM_VIEW_COLUMN_USAGE=one row for each column of a table that is explicitly or implicitly referenced in the <query expression> of the view being described.
+SYSTEM_VIEW_ROUTINE_USAGE=one row for each SQL-invoked routine identified as the subject routine of either a <routine invocation>, a <method reference>, a <method invocation>, or a <static method invocation> contained in a <view definition>
+SYSTEM_VIEW_TABLE_USAGE=one row for each table identified by a <table name> simply contained in a <table reference> that is contained in the <query expression> of a view
