Added System Daemon chapter to the UNIX chapter

--- a/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
+++ b/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
@@ -1,6 +1,7 @@
-# $Id$
+# $Id: sample-hsqldb.cfg,v 1.1 2004/04/23 15:54:56 unsaved Exp $
 
-# Sample configuration file for hsqldb database server.
+# Sample configuration file for HSQLDB database server.
+# See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
 
 # N.b.!!!!  You must place this in the right location for your type of UNIX.
 # See the init script "hsqldb" to see where this must be placed and
@@ -28,7 +29,8 @@ SHUTDOWN_URLIDS='sa mygms'
 HSQLDB_OWNER=blaine
 
 # SqlTool authentication file used only for shutdown.
-# The default value will be /root/sqltool.rc, since it is root who runs
-# the init script.  (See the SqlTool chapter of the HSQLDB User Guide if
-# you don't understand that).
+# The default value will be sqltool.rc in root's home directory, since it is 
+# root who runs the init script.
+# (See the SqlTool chapter of the HSQLDB User Guide if you don't understand 
+# this).
 #AUTH_FILE=/home/blaine/sqltool.rc
