post RC5 updates

--- a/base-one/trunk/src/org/hsqldb/resources/column-remarks.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/column-remarks.properties
@@ -82,6 +82,7 @@ SYSTEM_CACHEINFO_LARGEST_FREE_ITEM=largest allocation unit available for reuse
 SYSTEM_CACHEINFO_FREE_COUNT=number of allocation units available for reuse
 SYSTEM_CACHEINFO_FREE_POS=one greater than largest file position known to be allocated
 SYSTEM_CACHEINFO_MAX_CACHE_SIZE=maximum allowable cached Row objects
+SYSTEM_CACHEINFO_MAX_CACHE_BYTE_SIZE=limit on memory consumption of cached Row objects
 SYSTEM_CACHEINFO_MULTIPLIER_MASK=binary mask used to calculate indices into row data array
 SYSTEM_CACHEINFO_WRITER_LENGTH=length of row write buffer array
 # SYSTEM_CATALOGS
