--- a/base-one/trunk/src/org/hsqldb/resources/org_hsqldb_Library.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/org_hsqldb_Library.properties
@@ -31,7 +31,7 @@ truncate(double,int)@0=<code>d</code>, truncated
 truncate(double,int)@1=d - the value to truncate
 truncate(double,int)@2=p - the places left or right of the decimal point at which to truncate
 bitand(int,int)=Returns the bit-wise logical <em>and</em> of the given integer values.
-bitand(int,int)@0=he bit-wise logical <em>and</em> of <code>i</code> and <code>j</code>
+bitand(int,int)@0=the bit-wise logical <em>and</em> of <code>i</code> and <code>j</code>
 bitand(int,int)@1=i - the first value
 bitand(int,int)@2=j - the second value
 bitor(int,int)=Returns the bit-wise logical <em>or</em> of the given integer values.
@@ -178,4 +178,29 @@ isReadOnlyConnection(java.sql.Connection)@0=<code>true</code> if connection is r
 isReadOnlyConnection(java.sql.Connection)@1=conn - the <code>Connection</code> object for which to retrieve the current read-only status
 isReadOnlyDatabase(java.sql.Connection)=Retrieves whether this database is in read-only mode. <p>
 isReadOnlyDatabase(java.sql.Connection)@0=<code>true</code> if so; <code>false</code> otherwise
-isReadOnlyDatabase(java.sql.Connection)@1=c - null
+isReadOnlyDatabase(java.sql.Connection)@1=c the <code>Connection</code> object for which to retrieve the current database read-only status
+#Since 1.7.2
+bitLength(java.lang.String)=Returns the number of bits in the given <code>String</code>. This includes trailing blanks.
+bitLength(java.lang.String)@0=the bit length of <code>s</code>, including trailing blanks
+bitLength(java.lang.String)@1=The <code>String</code> for which to retrieve the bit length 
+datediff(java.lang.String,java.sql.Timestamp,java.sql.Timestamp)=Returns the number of date and time boundaries crossed between two specified datetime values.
+datediff(java.lang.String,java.sql.Timestamp,java.sql.Timestamp)@0=the number of date and time boundaries crossed between two specified dates, as a Long value
+datediff(java.lang.String,java.sql.Timestamp,java.sql.Timestamp)@1=datepart - Specifies the unit in which the interval is to be measured
+datediff(java.lang.String,java.sql.Timestamp,java.sql.Timestamp)@2=startdate - The starting datetime value for the interval. This value is subtracted from enddate to return the number of date-parts between the two arguments.
+datediff(java.lang.String,java.sql.Timestamp,java.sql.Timestamp)@3=enddate - The ending datetime for the interval. startdate is subtracted from this value to return the number of date-parts between the two arguments
+isReadOnlyDatabaseFiles(java.sql.Connection)=Retrieves whether the files of this database are in read-only mode.
+isReadOnlyDatabaseFiles(java.sql.Connection)@0=<code>true</code> if so; <code>false</code> otherwise
+isReadOnlyDatabaseFiles(java.sql.Connection)@1=c the <code>Connection</code> object for which to retrieve the current database files read-only status
+octetLength(java.lang.String)=Returns the number of bytes in the given <code>String</code>. This includes trailing blanks.
+octetLength(java.lang.String)@0=the octent length of <code>s</code>, including trailing blanks
+octetLength(java.lang.String)@1=The <code>String</code> for which to retrieve the octent length 
+position(java.lang.String,java.lang.String)=Returns the starting position of the first occurrence of the given <code>search</code> <code>String</code> object within the given <code>String</code> object, <code>s</code>.
+position(java.lang.String,java.lang.String)@0=the one-based starting position of the first occurrence of <code>search</code> within <code>s</code>, or 0 if not found
+position(java.lang.String,java.lang.String)@1=search - the <code>String</code> occurence to find in <code>s</code>
+position(java.lang.String,java.lang.String)@2=s - the <code>String</code> within which to find the first occurence of <code>search</code>
+trim(java.lang.String,java.lang.String,boolean,boolean)=Retrieves a character sequence derived from <code>s</code> with the leading, trailing or both leading and trailing occurances of <code>trimstr</code> removed
+trim(java.lang.String,java.lang.String,boolean,boolean)@0=The character sequence <code>s</code>, with either the leading or trailing occurrences of <code>trimstr</code> removed
+trim(java.lang.String,java.lang.String,boolean,boolean)@1=s - the character sequence from which to remove occurrences of <code>trimstr</code>
+trim(java.lang.String,java.lang.String,boolean,boolean)@2=trimstr - the character sequence whose occurances are to be removed from <code>s</code>
+trim(java.lang.String,java.lang.String,boolean,boolean)@3=leading - if true, then leading occurences are removed
+trim(java.lang.String,java.lang.String,boolean,boolean)@4=trailing - if true, then trailing occurences are removed
