Made MAX_STARTSTOP_SECS more easy for users to modify

--- a/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
+++ b/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.1 2004/04/23 15:54:56 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.2 2004/04/23 16:49:44 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -34,3 +34,8 @@ HSQLDB_OWNER=blaine
 # (See the SqlTool chapter of the HSQLDB User Guide if you don't understand 
 # this).
 #AUTH_FILE=/home/blaine/sqltool.rc
+
+# Time to allow for java process to die, if it's not able to start up,
+# And for it to shutdown after it receives the last SQL "shutdown" command.
+# If not set, will use default value set in the init script.
+#MAX_STARTSTOP_SECS=1
