Now works with WebServer as well as Server

--- a/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
+++ b/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.2 2004/04/23 16:49:44 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.3 2004/05/13 22:13:38 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -39,3 +39,6 @@ HSQLDB_OWNER=blaine
 # And for it to shutdown after it receives the last SQL "shutdown" command.
 # If not set, will use default value set in the init script.
 #MAX_STARTSTOP_SECS=1
+
+# Set to WebServer to start a HSQLDB WebServer instead of a Server.
+#TARGET_CLASS=Server
