--- a/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
+++ b/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.3 2004/05/13 22:13:38 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.4 2004/05/13 22:41:56 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -35,10 +35,13 @@ HSQLDB_OWNER=blaine
 # this).
 #AUTH_FILE=/home/blaine/sqltool.rc
 
-# Time to allow for java process to die, if it's not able to start up,
-# And for it to shutdown after it receives the last SQL "shutdown" command.
-# If not set, will use default value set in the init script.
-#MAX_STARTSTOP_SECS=1
+# Time to allow for JVM to die after all HSQLDB instances stopped.
+#MAX_TERMINATE_SECS=1
+
+# We require all Server/WebServer instances to be accessible within 
+# $MAX_START_SECS from when the Server/WebServer is started.
+# Raise this is you are running lots of DB instances or have a slow server.
+#MAX_START_SECS=60
 
 # Set to WebServer to start a HSQLDB WebServer instead of a Server.
 #TARGET_CLASS=Server
