Something I forgot for last mod

--- a/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
+++ b/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.4 2004/05/13 22:41:56 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.5 2004/05/14 20:35:01 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -17,7 +17,11 @@ HSQLDB_HOME=/home/blaine/hsqldb-dev
 # Where the file "server.properties" resides.
 SERVER_HOME=/home/blaine/db
 
-# These are "urlid" values from a SqlTool authentication file.
+# These are "urlid" values from a SqlTool authentication file
+# ** IN ADDITION TO THOSE IN YOUR server.properties OR webserver.properties **
+# file.  All server.urlid.X values from your properties file will automatically
+# be started/stopped/tested.  $SHUTDOWN_URLIDS is for additional urlids which
+# will stopped.
 # Separate multiple values with white space.  NO OTHER SPECIAL CHARACTERS!
 # Make sure to quote the entire value if it contains white space separator(s).
 SHUTDOWN_URLIDS='sa mygms'
