--- a/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
+++ b/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.5 2004/05/14 20:35:01 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.6 2004/05/14 20:37:59 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -21,7 +21,7 @@ SERVER_HOME=/home/blaine/db
 # ** IN ADDITION TO THOSE IN YOUR server.properties OR webserver.properties **
 # file.  All server.urlid.X values from your properties file will automatically
 # be started/stopped/tested.  $SHUTDOWN_URLIDS is for additional urlids which
-# will stopped.
+# will stopped.  (Therefore, most users will not set this at all).
 # Separate multiple values with white space.  NO OTHER SPECIAL CHARACTERS!
 # Make sure to quote the entire value if it contains white space separator(s).
 SHUTDOWN_URLIDS='sa mygms'
