Per Bisping's suggestions

--- a/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
+++ b/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.6 2004/05/14 20:37:59 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.7 2004/05/14 23:02:22 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -7,8 +7,10 @@
 # See the init script "hsqldb" to see where this must be placed and
 # what it should be renamed to.
 
-
 # This file is "sourced" by a Bourne shell, so use Bourne shell syntax.
+
+# This file WILL NOT WORK until you set (at least) the non-commented
+# variables to the appropriate values for your system.
 
 JAVA_HOME=/usr/java/j2sdk1.4.2_02
 
@@ -17,6 +19,22 @@ HSQLDB_HOME=/home/blaine/hsqldb-dev
 # Where the file "server.properties" resides.
 SERVER_HOME=/home/blaine/db
 
+# What UNIX user the server will run as.
+# (The shutdown client is always run as root or the invoker of the init script).
+# Runs as root by default, but you should take the time to set database file
+# ownerships to another user and set that user name here.
+HSQLDB_OWNER=blaine
+
+# We require all Server/WebServer instances to be accessible within 
+# $MAX_START_SECS from when the Server/WebServer is started.
+# Defaults to 60.
+# Raise this is you are running lots of DB instances or have a slow server.
+#MAX_START_SECS=200
+
+# Time to allow for JVM to die after all HSQLDB instances stopped.
+# Defaults to 1.
+#MAX_TERMINATE_SECS=0
+
 # These are "urlid" values from a SqlTool authentication file
 # ** IN ADDITION TO THOSE IN YOUR server.properties OR webserver.properties **
 # file.  All server.urlid.X values from your properties file will automatically
@@ -24,13 +42,8 @@ SERVER_HOME=/home/blaine/db
 # will stopped.  (Therefore, most users will not set this at all).
 # Separate multiple values with white space.  NO OTHER SPECIAL CHARACTERS!
 # Make sure to quote the entire value if it contains white space separator(s).
-SHUTDOWN_URLIDS='sa mygms'
-
-# What UNIX user the server will run as.
-# (The shutdown client is always run as root or the invoker of the init script).
-# Runs as root by default, but you should take the time to set database file
-# ownerships to another user and set that user name here.
-HSQLDB_OWNER=blaine
+# Defaults to none (i.e., only urlids set in properties file will be stopped).
+#SHUTDOWN_URLIDS='sa mygms'
 
 # SqlTool authentication file used only for shutdown.
 # The default value will be sqltool.rc in root's home directory, since it is 
@@ -39,13 +52,6 @@ HSQLDB_OWNER=blaine
 # this).
 #AUTH_FILE=/home/blaine/sqltool.rc
 
-# Time to allow for JVM to die after all HSQLDB instances stopped.
-#MAX_TERMINATE_SECS=1
-
-# We require all Server/WebServer instances to be accessible within 
-# $MAX_START_SECS from when the Server/WebServer is started.
-# Raise this is you are running lots of DB instances or have a slow server.
-#MAX_START_SECS=60
-
-# Set to WebServer to start a HSQLDB WebServer instead of a Server.
-#TARGET_CLASS=Server
+# Set to 'WebServer' to start a HSQLDB WebServer instead of a Server.
+# Defaults to 'Server'.
+#TARGET_CLASS=WebServer
