--- a/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
+++ b/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.7 2004/05/14 23:02:22 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.8 2004/05/16 02:02:47 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -11,6 +11,10 @@
 
 # This file WILL NOT WORK until you set (at least) the non-commented
 # variables to the appropriate values for your system.
+# Life will be easier if you avoid all filepaths with spaces or any other
+# funny characters.  Don't ask for support if you ignore this advice.
+
+# Thanks to Meikel Bisping for his contributions.  -- Blaine
 
 JAVA_HOME=/usr/java/j2sdk1.4.2_02
 
@@ -55,3 +59,23 @@ HSQLDB_OWNER=blaine
 # Set to 'WebServer' to start a HSQLDB WebServer instead of a Server.
 # Defaults to 'Server'.
 #TARGET_CLASS=WebServer
+
+# For TLS encryption for your Server, set these two variables.
+# N.b.:  If you set these, then make this file unreadable to non-root users!!!!
+# See the TLS chapter of the HSQLDB User Guide, paying attention to the 
+# security warning(s).
+# If you are running with a private server cert, then you will need to specify
+# the javax.net.ssl.trustStore using CLIENT_JVMARGS below.
+#TLS_KEYSTORE=/path/to/jks/server.store
+#TLS_PASSWORD=password
+
+# Any JVM args for the invocation of the JDBC client used to verify DB
+# instances and to shut them down (SqlToolSprayer).
+# This example specifies the location of a private trust store for TLS 
+# encryption.
+# For multiple args, put quotes around entire value.
+#CLIENT_JVMARGS=-Djavax.net.ssl.trustStore=/home/blaine/mailtrust.store
+
+# Any JVM args for the server.
+# For multiple args, put quotes around entire value.
+SERVER_JVMARGS=-Xmx512m
