Forgot to comment out sample line

--- a/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
+++ b/base-one/trunk/docsrc/guide/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.8 2004/05/16 02:02:47 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.9 2004/05/16 22:13:25 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -78,4 +78,4 @@ HSQLDB_OWNER=blaine
 
 # Any JVM args for the server.
 # For multiple args, put quotes around entire value.
-SERVER_JVMARGS=-Xmx512m
+#SERVER_JVMARGS=-Xmx512m
