Removed dependence upon HSQLDB_HOME

--- a/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
+++ b/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.10 2004/05/16 22:42:16 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.1 2004/06/02 20:32:05 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -18,7 +18,10 @@
 
 JAVA_HOME=/usr/java/j2sdk1.4.2_02
 
-HSQLDB_HOME=/home/blaine/hsqldb-dev
+# Unless you copied a hsqldb.jar file from another system, this typically
+# resides at $HSQLDB_HOME/lib/hsqldb.jar, where $HSQLDB_HOME is your HSQLDB
+# software base directory.
+HSQLDB_JAR_PATH=/home/blaine/hsqldb-dev/lib/hsqldb.jar
 
 # Where the file "server.properties" resides.
 SERVER_HOME=/home/blaine/db
