--- a/base-one/trunk/src/org/hsqldb/sample/sqltool.rc
+++ b/base-one/trunk/src/org/hsqldb/sample/sqltool.rc
@@ -1,17 +1,25 @@
-# $Id: sqltool.rc,v 1.1 2004/04/11 04:45:47 unsaved Exp $
+# $Id: sqltool.rc,v 1.1 2004/06/02 20:32:05 unsaved Exp $
 
 # This is a sample SqlTool configuration file, a.k.a. rc file.
 
-# If you have a hsqldb Server running with default settings on your
-# local computer, and you haven't changed the password for "sa", then
-# just copy this file to your home directory and run SqlTool like
-#    java org.hsqldb.util.SqlTool localhost-sa
-# (You need to have hsqldb.jar in your classpath or use the -cp switch
-# to "java", of course).
+# You can run SqlTool right now by copying this file to your home directory
+# and running
+#    java -jar /path/to/hsqldb.jar mem
+# This will access the first urlid definition below in order to use a 
+# personal Memory-Only database.
+
 # If you have the least concerns about security, then secure access to
 # your sqltool.rc file.
 # See the documentation for SqlTool for various ways to use this file.
 
+# A personal Memory-Only database.
+urlid mem
+url jdbc:hsqldb:mem:memdbid
+username sa
+password
+
+# This is for a hsqldb Server running with default settings on your local
+# computer (and for which you have not changed the password for "sa").
 urlid localhost-sa
 url jdbc:hsqldb:hsql://localhost
 username sa
@@ -24,10 +32,3 @@ password
 #username blaine
 #password secretpassword
 #driver oracle.jdbc.OracleDriver
-
-# You can use this right now to work with a personal Memory-Only database.
-# Just run "java org.hsqldb.util.SqlTool mem".
-urlid mem
-url jdbc:hsqldb:mem:memdbid
-username sa
-password
