Changed recommended way to do client TLS setup

--- a/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
+++ b/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.1 2004/06/02 20:32:05 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.2 2004/06/06 19:20:32 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -67,8 +67,10 @@ HSQLDB_OWNER=blaine
 # N.b.:  If you set these, then make this file unreadable to non-root users!!!!
 # See the TLS chapter of the HSQLDB User Guide, paying attention to the 
 # security warning(s).
-# If you are running with a private server cert, then you will need to specify
-# the javax.net.ssl.trustStore using CLIENT_JVMARGS below.
+# If you are running with a private server cert, then you will also need to 
+# set "truststore" in the your SqlTool config file (location is set by the
+# AUTH_FILE variable in this file, or it must be at the default location for 
+# HSQLDB_OWNER).
 #TLS_KEYSTORE=/path/to/jks/server.store
 #TLS_PASSWORD=password
 
@@ -77,7 +79,7 @@ HSQLDB_OWNER=blaine
 # This example specifies the location of a private trust store for TLS 
 # encryption.
 # For multiple args, put quotes around entire value.
-#CLIENT_JVMARGS=-Djavax.net.ssl.trustStore=/home/blaine/mailtrust.store
+#CLIENT_JVMARGS=-Djavax.net.debug=ssl
 
 # Any JVM args for the server.
 # For multiple args, put quotes around entire value.
