Modifications to accommodate Mac OS X

--- a/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
+++ b/base-one/trunk/src/org/hsqldb/sample/sample-hsqldb.cfg
@@ -1,4 +1,4 @@
-# $Id: sample-hsqldb.cfg,v 1.2 2004/06/06 19:20:32 unsaved Exp $
+# $Id: sample-hsqldb.cfg,v 1.3 2004/06/08 05:42:23 unsaved Exp $
 
 # Sample configuration file for HSQLDB database server.
 # See the "UNIX Quick Start" chapter of the Hsqldb User Guide.
@@ -16,7 +16,7 @@
 
 # Thanks to Meikel Bisping for his contributions.  -- Blaine
 
-JAVA_HOME=/usr/java/j2sdk1.4.2_02
+JAVA_EXECUTABLE=/usr/java/j2sdk1.4.2_02/bin/java
 
 # Unless you copied a hsqldb.jar file from another system, this typically
 # resides at $HSQLDB_HOME/lib/hsqldb.jar, where $HSQLDB_HOME is your HSQLDB
